# lib-version

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lib_version_remla/: return_version.py
src/lib_version_remla.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
